--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -560,6 +560,10 @@ video {
   position: sticky;
 }
 
+.-ml-20 {
+  margin-left: -5rem;
+}
+
 .block {
   display: block;
 }
@@ -572,12 +576,32 @@ video {
   display: none;
 }
 
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
 .border {
   border-width: 1px;
+}
+
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 html,
@@ -596,6 +620,7 @@ select {
 /* header section */
 
 .lan-body {
+  overflow: hidden;
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 40px;
   --tw-bg-opacity: 1;
@@ -737,39 +762,46 @@ select {
   color: rgb(15 15 15 / var(--tw-text-opacity));
 }
 
-.bg {
-  -webkit-animation: pulse 1.2s ease infinite;
-          animation: pulse 1.2s ease infinite;
-  background: #ffed5d;
+.pulse {
+  display: block;
+  border-radius: 50px;
+  background: #cca92c;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  -webkit-animation: pulse 2s infinite;
+          animation: pulse 2s infinite;
+}
+
+.pulse:hover {
+  -webkit-animation: none;
+          animation: none;
 }
 
 @-webkit-keyframes pulse {
   0% {
-    transform: scale(1, 1);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
   }
 
-  50% {
-    opacity: 0.3;
+  70% {
+    box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
   }
 
   100% {
-    transform: scale(1.5);
-    opacity: 0;
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
   }
 }
 
 @keyframes pulse {
   0% {
-    transform: scale(1, 1);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
   }
 
-  50% {
-    opacity: 0.3;
+  70% {
+    box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
   }
 
   100% {
-    transform: scale(1.5);
-    opacity: 0;
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
   }
 }
 
@@ -1973,6 +2005,11 @@ iframe.code {
   cursor: url(https://pickmyad.com/images/logo.svg), auto;
 }
 
+.land-influ {
+  cursor: url(https://app.pickmy.link/auth/assets/images/influencer/settings/pickmylink.svg),
+		auto;
+}
+
 /* vloger scroll overwrite */
 
 .land-a::-webkit-scrollbar {
@@ -1989,4 +2026,40 @@ iframe.code {
 
 .land-a::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+/* Smooth scroll  */
+
+.section span {
+  color: #f5507d;
+  font-size: 120px;
+  text-align: center;
+  font-weight: 700;
+  line-height: 132px;
+}
+
+.section h2 {
+  color: white;
+  font-size: 120px;
+  text-align: center;
+  font-weight: 700;
+  line-height: 132px;
+}
+
+.section p {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  font-weight: 600;
+  line-height: 32px;
+  padding-top: 16px;
+}
+
+.section--large {
+  width: 100vw;
+  color: white;
+}
+
+section {
+  transition: color 0.3s;
 }
