design issues fixing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-	height: 100%;
+	height: 100% !important;
 }
 
 body,
@@ -12,21 +12,33 @@ button,
 input,
 select {
 	margin: 0;
-	font-family: Figtree;
+	font-family: Figtree !important;
 }
-
+a:hover {
+	color: transparent !important;
+	text-decoration: none !important;
+}
+h2,
+h3,
+h4 {
+	margin-bottom: 0 !important;
+}
 /* header section */
 .lan-body {
-	@apply bg-[#0f0f0f] px-20 pt-5 rounded-bl-[40px] rounded-br-[40px] overflow-hidden;
+	@apply bg-[#0f0f0f] md:px-8 lg:px-20 px-4 pt-5 rounded-bl-[24px] rounded-br-[24px] md:rounded-bl-[40px] md:rounded-br-[40px] overflow-hidden;
 }
 .lan-head {
-	@apply bg-[#222] px-5 py-4 flex rounded-xl;
+	@apply bg-[#222] lg:px-5 md:px-5 px-4 py-4 flex rounded-xl;
 }
 .lan-btn {
 	@apply ml-auto;
 }
+.lan-allow {
+	@apply md:mt-0 mt-6 md:ml-auto ml-0;
+}
 .btn-common {
-	@apply py-[15px] px-[30px]  font-semibold text-base rounded-full leading-[19px];
+	@apply md:py-[15px] py-3 md:px-[30px] px-4 font-semibold md:text-base text-sm rounded-full leading-[19px];
+	outline: none !important;
 }
 .login {
 	@apply bg-[#2c2c2c]  text-white;
@@ -34,40 +46,45 @@ select {
 .create-link {
 	@apply bg-[#fff] text-[#0f0f0f] ml-3;
 }
-
+.logo-res {
+	@apply md:hidden block;
+}
+.logo-img {
+	@apply md:block hidden;
+}
 /* header 2 section */
 .land-head {
-	@apply mt-[100px];
+	@apply md:mt-[100px] mt-[70px];
 }
 .land-head h1 {
-	@apply text-center font-bold text-[90px] text-white leading-[99px];
+	@apply text-center font-bold md:text-[90px] text-[56px] text-white md:leading-[99px] leading-[61.6px];
 }
 .land-head p {
-	@apply text-[24px] text-center font-semibold  text-white mt-6 leading-[33.3px] md:w-[708px] m-auto;
+	@apply md:text-[24px] text-base text-center font-semibold  text-white mt-6 md:leading-[33.3px] leading-[22.4px] md:w-[708px] m-auto;
+	margin-bottom: 0 !important;
 }
 
 /* input section */
 .profile-cre {
-	@apply flex items-center justify-center gap-3 mt-[48px] pb-[64px];
+	@apply flex md:flex-row flex-col items-center justify-center gap-3 md:mt-[48px] mt-[70px] md:pb-[64px] pb-0;
 }
 .profile-input {
-	@apply w-[380px] border-solid border-[rgba(255,255,255,0.5)] rounded-full pt-5 pb-0.5 px-5 border;
+	@apply md:w-[380px] w-full border-solid border-[rgba(255,255,255,0.5)] rounded-full pt-5 pb-0.5 px-5 border;
 }
 .profile-input span {
 	@apply text-[rgba(255,255,255,0.35)] font-semibold text-base;
 }
 .profile-input input {
-	@apply bg-transparent outline-none w-[245px] text-white text-base font-semibold;
+	@apply bg-transparent outline-none md:w-[245px] w-auto text-white text-base font-semibold;
 }
 .land-claim button {
-	@apply bg-[#ffed5d] rounded-full px-6 py-[21px] text-[#0f0f0f] text-base font-bold leading-[22px];
+	@apply bg-[#ffed5d] rounded-full px-6 py-[21px] text-[#0f0f0f] text-base font-bold leading-[22px] md:w-auto w-full;
+}
+.land-claim {
+	@apply md:w-auto w-full;
 }
 .pulse {
-	display: block;
-	border-radius: 50px;
-	background: #cca92c;
-	cursor: pointer;
-	box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+	@apply block rounded-[50px] bg-[#cca92c] cursor-pointer shadow-kl;
 	animation: pulse 2s infinite;
 }
 .pulse:hover {
@@ -97,7 +114,27 @@ select {
 
 /* section 2 body */
 
-.sticky-parent {
+.section span {
+	@apply text-[#f5507d];
+}
+.section h2 {
+	@apply text-white lg:text-[120px] md:text-[90px] text-[44px] text-center font-bold lg:leading-[132px] md:leading-[100px] leading-[44px];
+}
+.section p {
+	@apply text-white lg:text-[30px] md:text-[26px] text-base font-semibold leading-[32px]  md:pt-0 lg:pt-4 pt-1 text-center;
+	margin-bottom: 0 !important;
+}
+.section--large {
+	@apply w-[100vw] text-white;
+}
+section {
+	@apply flex-col flex-shrink-0;
+	transition: color 0.3s;
+}
+.wrapper {
+	@apply flex-nowrap -ml-20;
+}
+/* .sticky-parent {
 	@apply h-[500vh] -mx-20;
 }
 .stickyin {
@@ -117,36 +154,36 @@ select {
 }
 .dim p {
 	@apply text-center font-semibold text-white text-[24px] pt-4 leading-[33.3px];
-}
+} */
 
 /* section three part */
 .land-influ {
-	@apply mt-[73px] mx-[100px];
+	@apply md:mt-[73px] mt-10 lg:mx-[100px] md:mx-8 mx-4;
 }
 .land-vlog {
-	@apply flex w-full gap-10;
+	@apply flex w-full md:gap-10 gap-0 md:flex-row flex-col;
 }
 .land-a {
-	@apply w-full h-[580px] overflow-auto relative;
+	@apply w-full relative;
 }
 .vloger-head {
-	@apply sticky top-0 z-10 bg-white flex items-center;
+	@apply md:sticky static top-0 z-10 bg-white flex md:items-center items-baseline md:flex-row flex-col;
 }
 .land-a span {
-	@apply text-[#0f0f0f] text-[60px] font-bold;
+	@apply text-[#0f0f0f] lg:text-[60px] md:text-[30px] text-[40px] font-bold;
 }
 
 .influ-dropsec {
-	@apply flex bg-[rgba(26,97,233,0.1)] cursor-pointer rounded-[70px] items-center ml-5 pr-2.5;
+	@apply flex bg-[rgba(26,97,233,0.1)] cursor-pointer rounded-[70px] items-center md:ml-5 ml-0 pr-2.5 md:mt-0 mt-2.5;
 }
 .influ-dropsec img {
-	@apply w-[60px] h-20;
+	@apply w-[60px] md:h-20 h-16;
 }
 .influ-vlog {
-	@apply text-[30px] rounded-[50px] pr-2.5 pl-[32px] cursor-pointer font-bold text-[#1a61e9];
+	@apply lg:text-[30px] md:text-[20px] text-[36px] rounded-[50px] pr-2.5 md:pl-[32px] pl-5 cursor-pointer font-bold text-[#1a61e9];
 }
 .infludrop-btn {
-	@apply py-1 px-1.5 rounded-[12px] bg-white w-[312px] mt-1 absolute left-[30%] top-[88px] shadow-mf;
+	@apply py-1 px-1.5 rounded-[12px] bg-white w-[312px] mt-1 absolute md:left-[30%] left-0 md:top-[88px] top-[134px] shadow-mf;
 }
 #select0,
 #select1,
@@ -162,18 +199,19 @@ select {
 }
 
 .land-a p {
-	@apply text-2xl font-semibold text-[#0f0f0f] sticky top-[100px];
+	@apply lg:text-2xl md:text-xl text-base font-semibold text-[#0f0f0f] md:sticky static md:top-[100px] top-0 md:mt-0 mt-2.5;
+	margin-bottom: 0 !important;
 }
 
 /* right side image */
 .land-vloger {
-	@apply bg-[#ffa42b] rounded-[40px] w-full relative;
+	@apply bg-[#ffa42b] md:rounded-[40px] rounded-[24px] w-full relative md:mt-0 mt-6;
 }
 .land-vloger img {
-	@apply m-auto z-10 h-[695px];
+	@apply m-auto z-10 lg:h-[695px] md:h-[630px] h-full;
 }
 iframe.code {
-	@apply block w-1 h-1 min-w-full min-h-[690px] border-none;
+	@apply block w-1 h-1 min-w-full md:min-h-[690px] min-h-full border-none;
 }
 .man-pic img {
 	@apply absolute left-[117px] right-0 top-[-45px];
@@ -203,70 +241,73 @@ iframe.code {
 
 /* left side text section */
 .land-lin {
-	@apply mt-[278px];
+	@apply md:mt-[278px] mt-[36px];
 }
 .land-lin span {
-	@apply text-[40px] font-bold text-[#0f0f0f];
+	@apply lg:text-[40px] md:text-[30px] text-[40px] font-bold text-[#0f0f0f];
 }
 .land-lin p {
-	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] max-w-[400px];
+	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] max-w-[400px] mt-0;
+	margin-bottom: 0 !important;
 }
 
 /* progress bar section */
 .earn-section {
-	@apply bg-[#290038] rounded-[40px] mx-[26px] mt-[60px];
+	@apply bg-[#290038] md:rounded-[40px] rounded-none md:mx-[26px] mx-0 mt-[60px];
 }
 .earn-main {
-	@apply flex gap-[100px];
+	@apply flex md:flex-row flex-col-reverse lg:gap-[100px] md:gap-[50px] gap-4 md:px-0 px-4;
 }
 .earn-money-section {
-	@apply m-auto w-full text-center py-[107px] pl-[128px];
+	@apply m-auto w-full text-center lg:py-[107px] md:py-[60px] py-0 lg:pl-[128px] md:pl-5 pl-0 md:mt-0 mt-[64px] md:mb-0 mb-[48px];
 }
 .earn-money-section h2 {
-	@apply text-[123.4px] font-extrabold text-white leading-[197.5px] flex items-baseline justify-center;
+	@apply lg:text-[123.4px] md:text-[70px] text-[64px] font-extrabold text-white flex items-baseline justify-center;
 }
 .rupee {
-	@apply text-[88.2px] font-extrabold text-white leading-[141.1px];
+	@apply md:text-[30px] lg:text-[88.2px] text-[36px] font-extrabold text-white lg:leading-[141.1px] md:leading-normal leading-normal;
 }
 .earn-money-section p {
-	@apply text-[rgba(255,255,255,0.4)] font-medium text-[13px] pt-3 w-[308px] m-auto;
+	@apply text-[rgba(255,255,255,0.4)] font-medium text-[13px] pt-3 lg:w-[308px] md:w-auto w-auto m-auto md:px-0 px-4;
+	margin-bottom: 0 !important;
 }
 .earn-btn {
-	@apply mt-[38px] ml-0 font-bold;
+	@apply md:mt-[38px] mt-6 ml-0 font-bold;
 }
 .earn {
-	@apply text-[60px] text-white font-bold leading-[60px];
+	@apply lg:text-[60px] md:text-[30px] text-[32px] text-white font-bold leading-[60px];
 }
 .emoji {
-	@apply text-[44px] font-bold leading-[44px];
+	@apply lg:text-[44px] md:text-[30px] text-[24px] font-bold leading-[44px];
 }
 .earn-rich {
-	@apply w-full pt-[100px] pr-[88px];
+	@apply w-full lg:pt-[100px] md:pt-6 pt-[48px] lg:pr-[88px] md:pr-[46px] pr-0 md:text-start text-center;
 }
 .earn-rich h3 {
-	@apply text-[40px] text-white font-bold leading-[64px];
+	@apply lg:text-[40px] md:text-[30px] text-[40px] text-white font-bold  lg:leading-[64px] md:leading-[30px] leading-normal;
 }
 .earn-rich p {
 	@apply text-base text-[rgba(255,255,255,0.85)] font-medium leading-[25.5px] pt-[7px];
+	margin-bottom: 0 !important;
 }
 .earn-rich span {
-	@apply text-[18px] text-white font-bold leading-[28.8px] pt-[48px] block;
+	@apply lg:text-[18px] md:text-base text-base text-white font-bold leading-[28.8px] lg:pt-[48px] md:pt-0 pt-4 block;
 }
 .range-slider {
 	@apply relative mt-[15px] gap-[24px];
 }
 .earn-k {
-	@apply text-[18px] font-medium text-[rgba(255,255,255,0.4)];
-	position: absolute;
-	top: 50%;
+	@apply text-[18px] font-medium text-[rgba(255,255,255,0.4)] absolute top-[50%] lg:left-[-10%] md:left-[-15%] left-0;
+	/* position: absolute;
+	top: 50%; */
 	transform: translateY(-50%);
-	left: -10%;
+	/* left: -10%; */
 }
 .earn-m {
-	left: 102%;
+	@apply md:left-[102%] left-[80%] right-0;
 }
 #range {
-	@apply w-full bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
+	@apply md:w-full w-[230px] bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
 	-webkit-appearance: none;
 }
 
@@ -299,7 +340,7 @@ iframe.code {
 	line-height: 26px;
 }
 #range2 {
-	@apply w-full bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
+	@apply md:w-full w-[230px] bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
 	-webkit-appearance: none;
 }
 
@@ -338,25 +379,27 @@ iframe.code {
 /* Carousel Section */
 
 .pick-carousel-sec {
-	@apply bg-[#0f0f0f] mx-[26px] mt-[28px] mb-[48px] rounded-[40px] overflow-hidden;
+	@apply bg-[#0f0f0f] lg:mx-[26px] md:mx-0 mx-2 md:mt-[28px] mt-2.5 mb-[48px] md:rounded-[40px] rounded-[20px] overflow-hidden;
 }
 .pick-caro {
-	@apply pl-[74px] flex;
+	@apply lg:pl-[74px] md:pl-10 pl-6 md:pr-0 pr-6 flex lg:flex-row md:flex-col flex-col;
 }
 .pick-influ {
-	@apply pt-20 pb-[248px];
+	@apply lg:pt-20 md:pt-8 pt-10 lg:pb-[248px] md:pb-20 pb-16;
 }
+
 .pick-influ h3 {
-	@apply text-[60px] font-extrabold text-white leading-[66px] w-[579px];
+	@apply md:text-[60px] text-[40px] font-extrabold text-white md:leading-[66px] leading-[44px] md:w-[579px] w-full;
 }
 .pick-influ span {
 	@apply text-[#f5507d];
 }
 .pick-influ p {
-	@apply text-[24px] font-semibold text-white leading-[33.6px] pt-8 w-[548px];
+	@apply md:text-[24px] text-base font-semibold text-white md:leading-[33.6px] leading-[22.4px] md:pt-8 pt-6 md:w-[548px] w-full;
+	margin-bottom: 0 !important;
 }
 .pick-slider {
-	@apply w-full;
+	@apply w-full lg:pb-0 md:pb-[55px] pb-10;
 }
 .slide-track {
 	@apply flex;
@@ -365,7 +408,7 @@ iframe.code {
 
 .slide-track2 {
 	@apply flex;
-	animation: scroll 100s linear infinite;
+	animation: scroll 40s linear infinite;
 	animation-direction: reverse;
 }
 .slide-track:hover {
@@ -404,16 +447,21 @@ iframe.code {
 	@apply relative h-auto m-auto;
 	transform: rotate(-35deg);
 }
+@media only screen and (max-width: 768px) {
+	.slider {
+		transform: none;
+	}
+}
 .slider-second {
-	@apply mt-24;
+	@apply lg:mt-24 md:mt-8 mt-4;
 }
 .flip-card {
-	@apply bg-white w-[250px] h-[250px] rounded-full mx-2;
+	@apply bg-white md:w-[250px] md:h-[250px] w-[141px] h-[141px] rounded-full mx-2;
 	perspective: 1000px;
 }
 
 .flip-card-inner {
-	@apply relative w-[250px] h-full text-center;
+	@apply relative md:w-[250px] md:h-full w-[141px] h-[141px] text-center;
 	transition: transform 0.6s;
 	transform-style: preserve-3d;
 }
@@ -424,12 +472,12 @@ iframe.code {
 
 .flip-card-front,
 .flip-card-back {
-	@apply absolute w-[250px] h-[250px] rounded-full;
+	@apply absolute md:w-[250px] md:h-[250px] w-[141px] h-[141px] rounded-full;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
 .flip-card-front img {
-	@apply w-[250px] h-[250px] rounded-full;
+	@apply md:w-[250px] md:h-[250px] w-[141px] h-[141px] rounded-full;
 }
 
 .flip-card-back {
@@ -438,33 +486,34 @@ iframe.code {
 }
 
 .flip-card-back p {
-	@apply text-[#F5507D] font-medium text-xl;
+	@apply text-[#F5507D] font-medium md:text-xl text-base;
+	margin-bottom: 0 !important;
 }
 .flip-card-back h3 {
-	@apply text-[#0f0f0f] font-bold text-xl truncate max-w-[180px];
+	@apply text-[#0f0f0f] font-bold md:text-xl text-base truncate md:max-w-[180px] max-w-[80px];
 }
 
 /* frequently ansked question */
 .lan-asked {
-	@apply bg-[#fbe9d5] px-[100px] mt-[48px] pb-[48px];
+	@apply bg-[#fbe9d5] lg:px-[100px] md:px-[30px] px-4 mt-[48px] md:pb-[48px] pb-[32px];
 }
 .pick-askme {
-	@apply flex;
+	@apply flex md:flex-row flex-col;
 }
 .pic-le {
-	@apply pt-[162px] w-full;
+	@apply md:pt-[162px] pt-[48px] w-full md:text-start text-center;
 }
 .pic-le img {
-	@apply rounded-full w-[200px] h-[200px] object-cover;
+	@apply rounded-full md:w-[200px] md:h-[200px] w-[100px] h-[100px] object-cover md:m-0 m-auto;
 }
 .pic-le span {
-	@apply text-[24px] font-semibold text-[#0f0f0f] pt-[36px] block;
+	@apply lg:text-[24px] md:text-xl text-base font-semibold text-[#0f0f0f] md:pt-[36px] pt-4 block;
 }
 .pic-le h4 {
-	@apply text-[60px] font-extrabold text-[#0f0f0f] pt-3 leading-[66px];
+	@apply lg:text-[60px] md:text-[30px] text-[40px] font-extrabold text-[#0f0f0f] md:pt-3 pt-2.5 lg:leading-[66px] md:leading-[46px] leading-[44px];
 }
 .pick-re {
-	@apply pt-20 w-full;
+	@apply md:pt-20 pt-6 w-full;
 }
 .accordion-heading {
 	@apply text-[#0f0f0f] text-xl border-b border-[rgba(15,15,15,0.1)] px-0 py-4 font-bold cursor-pointer;
@@ -486,6 +535,7 @@ iframe.code {
 }
 .accordion-content p {
 	@apply mt-[30px];
+	margin-bottom: 0 !important;
 }
 .accordion-content a {
 	@apply text-[#f5507d];
@@ -494,19 +544,25 @@ iframe.code {
 /* footer section  */
 
 .pic-footer {
-	@apply bg-[#222222] mt-[100px] rounded-[20px] px-[48px] py-10;
+	@apply bg-[#222222] md:mt-[100px] mt-6 rounded-[20px] lg:px-[48px] md:px-5 px-4 lg:py-10 md:py-8 py-6;
 }
 .lan-footer {
-	@apply flex items-center;
+	@apply flex items-center md:flex-row flex-col;
+}
+.footer-by img {
+	@apply md:w-full md:h-full w-[186px];
 }
 .footer-by span {
-	@apply text-[rgba(255,255,255,0.4)] text-[15px] font-semibold;
+	@apply text-[rgba(255,255,255,0.4)] text-[15px] font-semibold md:text-start text-center block;
 }
 .footer-social {
-	@apply flex items-center mt-[36px] gap-4 h-[56px];
+	@apply flex items-center md:mt-[36px] mt-[48px] gap-4 h-[56px] md:flex-row flex-col md:mb-0 mb-10;
 }
 .footer-social img {
 	@apply bg-[#2c2c2c] p-2 rounded-full cursor-pointer;
+}
+.footer-icon {
+	@apply flex items-center gap-4;
 }
 .footer-social img:hover {
 	animation-name: footer-social;
@@ -524,7 +580,7 @@ iframe.code {
 	}
 }
 .footer-policy {
-	@apply ml-auto flex gap-[30px];
+	@apply md:ml-auto ml-0 flex gap-[30px];
 }
 .footer-policy span {
 	@apply text-[rgba(255,255,255,0.5)] font-semibold text-[13px] cursor-pointer;
@@ -584,6 +640,7 @@ iframe.code {
 	-webkit-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 	background-size: 300% 100%;
+	outline: none !important;
 }
 .land-claim button {
 	background-image: linear-gradient(
@@ -682,46 +739,46 @@ iframe.code {
 		auto;
 }
 /* vloger scroll overwrite */
-.land-a::-webkit-scrollbar {
+.row2::-webkit-scrollbar {
 	width: 0px;
 }
-.land-a::-webkit-scrollbar-track {
+/* .row2::-webkit-scrollbar-track {
 	background: #f1f1f1;
 }
-.land-a::-webkit-scrollbar-thumb {
+.row2::-webkit-scrollbar-thumb {
 	background: #888;
 }
 
-.land-a::-webkit-scrollbar-thumb:hover {
+.row2::-webkit-scrollbar-thumb:hover {
 	background: #555;
-}
+} */
+
 /* Smooth scroll  */
-.section span {
-	color: #f5507d;
-	font-size: 120px;
-	text-align: center;
-	font-weight: 700;
-	line-height: 132px;
+.mobile-vloger {
+	@apply md:hidden block md:h-full h-screen bg-[#290038];
 }
-.section h2 {
-	color: white;
-	font-size: 120px;
-	text-align: center;
-	font-weight: 700;
-	line-height: 132px;
+
+.row1 {
+	@apply flex md:flex-row flex-col items-center justify-center;
 }
-.section p {
-	color: white;
-	font-size: 30px;
-	text-align: center;
-	font-weight: 600;
-	line-height: 32px;
-	padding-top: 16px;
+.row2 {
+	@apply w-full md:h-[580px] h-auto overflow-auto;
 }
-.section--large {
-	width: 100vw;
-	color: white;
+.mobile {
+	@apply md:hidden block;
 }
-section {
-	transition: color 0.3s;
+.mobile2 {
+	@apply md:block hidden;
 }
+.mobile-off {
+	@apply md:h-auto h-screen;
+}
+.mobile-scroll {
+	@apply md:hidden block m-auto text-center;
+}
+/* style="
+						translate: none;
+						rotate: none;
+						scale: none;
+						transform: translate3d(-0.0007px, 0px, 0px);
+						" */
