--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,7 +235,7 @@ iframe.code {
 	@apply lg:text-[40px] md:text-[30px] text-[40px] font-bold text-[#0f0f0f];
 }
 .land-lin p {
-	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] max-w-[400px] mt-0;
+	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] lg:max-w-[400px] md:max-w-[325px]  mt-0;
 	margin-bottom: 0 !important;
 }
 
@@ -624,14 +624,14 @@ iframe.code {
 	animation-duration: 3s;
 	animation-fill-mode: both;
 }
-.zoo-in-i {
-	animation-duration: 3s;
-	animation-fill-mode: both;
-}
-.zoo-in-i {
+.zoo-in {
 	animation-name: zoomInLeft;
 }
-.zoo-in {
+.zoo-in-btn {
+	animation-duration: 6s;
+	animation-fill-mode: both;
+}
+.zoo-in-btn {
 	animation-name: zoomInLeft;
 }
 
@@ -647,7 +647,7 @@ iframe.code {
 
 /* link text animation */
 .land-head span {
-	background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+	background: linear-gradient(92deg, #f35626, #feab3a);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	-webkit-animation: hue 4s infinite linear;
