--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1366,12 +1366,26 @@ iframe.code {
 
 .land-lin p {
   margin-top: 0px;
-  max-width: 400px;
   padding-top: 7px;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 500;
   color: rgba(15,15,15,0.7);
+}
+
+@media (min-width: 768px) {
+  .land-lin p {
+    max-width: 325px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .land-lin p {
+    max-width: 400px;
+  }
+}
+
+.land-lin p {
   margin-bottom: 0 !important;
 }
 
@@ -2603,18 +2617,15 @@ iframe.code {
           animation-duration: 3s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
-}
-
-.zoo-in-i {
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
   -webkit-animation-name: zoomInLeft;
           animation-name: zoomInLeft;
 }
 
-.zoo-in {
+.zoo-in-btn {
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
   -webkit-animation-name: zoomInLeft;
           animation-name: zoomInLeft;
 }
@@ -2642,7 +2653,7 @@ iframe.code {
 /* link text animation */
 
 .land-head span {
-  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+  background: linear-gradient(92deg, #f35626, #feab3a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: hue 4s infinite linear;
